--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ requests==2.31.0
 python-multipart==0.0.6
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
-gotrue==0.5.0
+supabase==2.5.1
 python-jose[cryptography]==3.3.0
 pandas==2.0.3
 openpyxl==3.1.2
